--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <img src="IMG_3681のコピー.jpg" width="300px">
     <img src="IMG_3682のコピー.jpg" width="300px">
     <img src="IMG_3683のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_3684のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
