--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="IMG_3683のコピー.jpg" width="300px">
     <img src="IMG_3684のコピー.jpg" width="300px">
     <img src="IMG_3685のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_3686のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
