--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <img src="IMG_3686のコピー.jpg" width="300px">
     <img src="IMG_3687.JPG" width="300px">
     <img src="IMG_3688のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_3689のコピー.jpg" width="300px">
   </body>
 </html>
